syntax = "proto3";

package elastic.apm.v1;

option go_package = "/modelpb";

message Message {
  string body = 1;
  map<string, HTTPHeaderValue> headers = 2;
  optional int64 age_millis = 3;
  string queue_name = 4;
  string routing_key = 5;
}

message HTTPHeaderValue {
  repeated string values = 1;
}
